--- a/styles.css
+++ b/styles.css
@@ -67,3 +67,31 @@ button {
     padding: 5px 30px;
     border-radius: 8px;
 }
+
+/* SECOND BLOCK*/
+
+.second-block {
+    margin: 0;
+    padding-left: 200px;
+    padding-right: 200px;
+    padding-bottom: 100px;
+}
+
+.title {
+    font-size: 36px;
+    font-weight: bold;
+    color: #1F2937;
+    text-align: center;
+    padding: 30px;
+}
+
+.four-images {
+    display: flex;
+    justify-content: center;
+    gap: 20px;
+    align-items: center; 
+}
+
+img {
+    height: 150px;
+}
