--- a/styles.css
+++ b/styles.css
@@ -50,6 +50,8 @@ a:link {
     text-align: center;
     align-items: center;
     padding: 100px;
+    height: 100px;
+    width: 400px;
 }
 
 .title-blue {
@@ -66,6 +68,7 @@ button {
     text-align: center;
     padding: 5px 30px;
     border-radius: 8px;
+    border: 1px solid white;
 }
 
 /* SECOND BLOCK*/
@@ -94,6 +97,8 @@ button {
 
 img {
     height: 150px;
+    border: 3px solid #1F2937;
+    border-radius: 8px;
 }
 
 .block {
